# cursor-python-baseline

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ai-cu12-additive.yml  environment.yml  pyproject.toml
.cursor/rules/: codex.mdc  python.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: codex.sh  init.sh
tests/: test_basic.py
