[project]
name = "yourpkg"
version = "0.1.0"
description = "Replace me in scripts/init.sh"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
